// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculate aide-déclaration-indépendant: ACRE 1`] = `"[50000,3177,11384,101,14662,35338]"`;

exports[`calculate aide-déclaration-indépendant: ACRE 2`] = `"[15000,949,3261,101,4311,10689]"`;

exports[`calculate aide-déclaration-indépendant: ACRE 3`] = `"[5000,312,1354,101,1767,3233]"`;

exports[`calculate aide-déclaration-indépendant: ACRE 4`] = `
"[10000,630,560,101,1291,8709]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: ACRE 5`] = `
"[10000,630,-1457,101,-726,10726]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: IJSS (indemnité sécurité sociale) 1`] = `"[50000,3024,11424,101,14549,35451]"`;

exports[`calculate aide-déclaration-indépendant: RSA 1`] = `"[500,25,82,101,208,292]"`;

exports[`calculate aide-déclaration-indépendant: RSA 2`] = `"[5000,312,1021,101,1434,3566]"`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 1`] = `"[50000,3175,17728,138,21041,28959]"`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 2`] = `"[50000,3175,16580,138,19893,30107]"`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 3`] = `"[50000,3175,14664,138,17977,32023]"`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 4`] = `"[50000,0,0,118,0,0]"`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 5`] = `"[50000,3175,16186,138,19499,30501]"`;

exports[`calculate aide-déclaration-indépendant: débit de tabac 1`] = `"[50000,3177,5672,101,8950,41050]"`;

exports[`calculate aide-déclaration-indépendant: international 1`] = `"[50000,0,0,101,0,0]"`;

exports[`calculate aide-déclaration-indépendant: international 2`] = `"[50000,1267,11893,101,13261,36739]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 1`] = `"[50000,3176,11379,118,14673,35327]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 2`] = `"[5000,311,1353,118,1782,3218]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 3`] = `"[50000,3177,11384,101,14662,35338]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 4`] = `"[5000,312,1354,101,1767,3233]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 5`] = `"[50000,3177,11423,101,14701,35299]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 6`] = `"[5000,312,1316,101,1729,3271]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 7`] = `
"[50000,3177,9515,101,12793,37207]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 1`] = `"[500,25,1026,101,1152,0]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 2`] = `"[1000,57,1026,101,1184,0]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 3`] = `"[1500,89,1052,101,1242,258]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 4`] = `"[2000,121,1096,101,1318,682]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 5`] = `"[5000,312,1354,101,1767,3233]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 6`] = `"[10000,630,2203,101,2934,7066]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 7`] = `"[100000,6361,20835,101,27297,72703]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 8`] = `"[1000000,63664,106148,101,169913,830087]"`;

exports[`calculate simulations-artiste-auteur: bnc 1`] = `"[1230]"`;

exports[`calculate simulations-artiste-auteur: bnc 2`] = `"[1863]"`;

exports[`calculate simulations-artiste-auteur: bnc 3`] = `"[931]"`;

exports[`calculate simulations-artiste-auteur: salarié 1`] = `"[160]"`;

exports[`calculate simulations-artiste-auteur: salarié 2`] = `"[1603]"`;

exports[`calculate simulations-artiste-auteur: salarié 3`] = `"[12410]"`;

exports[`calculate simulations-auto-entrepreneur: ACRE 1`] = `
"[20686,57,1667,0,20000]
Notifications affichées : dirigeant . auto-entrepreneur . notification valeur annuelle"
`;

exports[`calculate simulations-auto-entrepreneur: ACRE 2`] = `
"[33228,269,2500,0,30000]
Notifications affichées : dirigeant . auto-entrepreneur . notification valeur annuelle"
`;

exports[`calculate simulations-auto-entrepreneur: ACRE 3`] = `
"[45267,439,3333,0,40000]
Notifications affichées : dirigeant . auto-entrepreneur . notification valeur annuelle"
`;

exports[`calculate simulations-auto-entrepreneur: aides 1`] = `
"[5171,14,417,0,5000]
Notifications affichées : dirigeant . auto-entrepreneur . notification valeur annuelle"
`;

exports[`calculate simulations-auto-entrepreneur: aides 2`] = `
"[51714,143,4167,0,50000]
Notifications affichées : dirigeant . auto-entrepreneur . notification valeur annuelle"
`;

exports[`calculate simulations-auto-entrepreneur: impôt sur le revenu 1`] = `"[32092,591,2083,706,24294]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 1`] = `"[574,6,42,0,500]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 2`] = `"[1148,12,83,0,1000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 3`] = `"[2297,25,167,0,2000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 4`] = `"[5742,62,417,0,5000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 5`] = `"[11483,124,833,0,10000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 6`] = `"[22966,247,1667,0,20000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 7`] = `"[57415,618,4167,0,50000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 8`] = `"[80381,865,5833,956,69044]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 9`] = `
"[114830,1236,8333,3297,96703]
Notifications affichées : dirigeant . auto-entrepreneur . contrôle seuil de TVA dépassé"
`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 10`] = `
"[1148303,12359,83333,126543,873457]
Notifications affichées : dirigeant . auto-entrepreneur . contrôle seuil de CA dépassé, dirigeant . auto-entrepreneur . contrôle seuil de TVA dépassé"
`;

exports[`calculate simulations-indépendant: acre 1`] = `"[73025,23025,50000,51980,8213,41787,0,73025]"`;

exports[`calculate simulations-indépendant: activité 1`] = `"[29119,9119,20000,20788,603,19397,0,29119]"`;

exports[`calculate simulations-indépendant: activité 2`] = `"[29101,9101,20000,20787,603,19397,0,29101]"`;

exports[`calculate simulations-indépendant: cotisations minimales 1`] = `"[1372,1272,100,134,0,100,0,1372]"`;

exports[`calculate simulations-indépendant: cotisations minimales 2`] = `"[244,144,100,104,0,100,0,244]"`;

exports[`calculate simulations-indépendant: impôt sur le revenu 1`] = `"[29085,9085,20000,20787,603,19397,0,29085]"`;

exports[`calculate simulations-indépendant: impôt sur le revenu 2`] = `"[73025,23025,50000,51980,8213,41787,0,73025]"`;

exports[`calculate simulations-indépendant: impôt sur le revenu 3`] = `"[29085,9085,20000,20787,2079,17921,0,29085]"`;

exports[`calculate simulations-indépendant: inversions 1`] = `"[2000,1384,616,668,0,616,0,2000]"`;

exports[`calculate simulations-indépendant: inversions 2`] = `"[50000,16003,33997,35352,3500,30497,0,50000]"`;

exports[`calculate simulations-indépendant: inversions 3`] = `"[14596,4596,10000,10394,0,10000,0,14596]"`;

exports[`calculate simulations-indépendant: inversions 4`] = `"[69940,22078,47862,49758,7862,40000,0,69940]"`;

exports[`calculate simulations-indépendant: inversions 5`] = `"[14596,4596,10000,10394,0,10000,1000,15596]"`;

exports[`calculate simulations-indépendant: inversions 6`] = `"[19000,5928,13072,13585,0,13072,1000,20000]"`;

exports[`calculate simulations-indépendant: inversions 7`] = `"[18000,5625,12375,12861,0,12375,2000,20000]"`;

exports[`calculate simulations-indépendant: échelle de revenus 1`] = `"[1858,1358,500,548,0,500,0,1858]"`;

exports[`calculate simulations-indépendant: échelle de revenus 2`] = `"[2467,1467,1000,1064,0,1000,0,2467]"`;

exports[`calculate simulations-indépendant: échelle de revenus 3`] = `"[3075,1575,1500,1581,0,1500,0,3075]"`;

exports[`calculate simulations-indépendant: échelle de revenus 4`] = `"[3682,1682,2000,2097,0,2000,0,3682]"`;

exports[`calculate simulations-indépendant: échelle de revenus 5`] = `"[7428,2428,5000,5199,0,5000,0,7428]"`;

exports[`calculate simulations-indépendant: échelle de revenus 6`] = `"[14595,4595,10000,10393,0,10000,0,14595]"`;

exports[`calculate simulations-indépendant: échelle de revenus 7`] = `"[139595,39595,100000,103788,24909,75091,0,139595]"`;

exports[`calculate simulations-indépendant: échelle de revenus 8`] = `"[1239955,239955,1000000,1033666,444476,555524,0,1239955]"`;

exports[`calculate simulations-professions-libérales: CIPAV 1`] = `
"[0,500,0,0,3,0]
Notifications affichées : entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: CIPAV 2`] = `
"[0,1000,0,0,3,0]
Notifications affichées : entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: CIPAV 3`] = `
"[0,1500,0,0,3,0]
Notifications affichées : entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: CIPAV 4`] = `
"[0,2000,0,0,3,0]
Notifications affichées : entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: CIPAV 5`] = `
"[0,5000,0,0,3,0]
Notifications affichées : entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: CIPAV 6`] = `
"[0,10000,0,0,4,0]
Notifications affichées : entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: CIPAV 7`] = `
"[0,100000,0,0,4,0]
Notifications affichées : entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: CIPAV 8`] = `
"[0,1000000,0,0,4,0]
Notifications affichées : entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: auxiliaire médical 1`] = `
"[0,22249,0,0,4,0]
Notifications affichées : entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: auxiliaire médical 2`] = `
"[0,21923,0,0,4,0]
Notifications affichées : entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: auxiliaire médical 3`] = `
"[0,238215,0,0,4,0]
Notifications affichées : entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: médecin 1`] = `
"[0,35727,0,0,4,0]
Notifications affichées : entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: médecin 2`] = `
"[0,29771,0,0,4,0]
Notifications affichées : entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: médecin 3`] = `
"[0,213518,0,0,4,0]
Notifications affichées : entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: médecin 4`] = `
"[0,293798,0,0,4,0]
Notifications affichées : entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: médecin 5`] = `
"[0,81098,0,0,4,0]
Notifications affichées : entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: sage-femme 1`] = `
"[0,37617,0,0,4,0]
Notifications affichées : entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: sage-femme 2`] = `
"[0,14852,0,0,4,0]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable, entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: sage-femme 3`] = `
"[0,2728,0,0,3,0]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable, dirigeant . indépendant . PL . CARCDSF . sage-femme . exonération PCV, entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: sage-femme 4`] = `
"[0,14852,0,0,4,0]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable, entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: sage-femme 5`] = `
"[0,14775,0,0,4,0]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable, entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-professions-libérales: sage-femme 6`] = `
"[0,14699,0,0,4,0]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable, entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): ACRE 1`] = `"[605,0,0,7184,4,13]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): ACRE 2`] = `"[1247,0,0,14544,4,26]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): ACRE 3`] = `"[1889,0,0,21905,4,40]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 1`] = `"[1389,0,0,16178,4,29]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 2`] = `"[1389,0,0,16178,4,29]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 3`] = `"[1389,0,0,16178,4,29]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 4`] = `"[915,0,0,10742,4,19]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 5`] = `"[14469,0,0,154362,4,46]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 6`] = `"[915,0,0,10742,4,19]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 1`] = `"[915,0,0,0,4,0]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 2`] = `
"[915,0,0,0,4,0]
Notifications affichées : entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 3`] = `"[915,0,0,10742,4,19]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 4`] = `"[915,0,0,10742,4,19]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 5`] = `"[915,0,0,10742,4,19]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): avec charges 1`] = `"[441,0,0,5306,4,10]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): avec charges 2`] = `"[915,0,0,10742,4,19]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 1`] = `"[0,0,0,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 2`] = `"[14,0,0,139,0,1]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 3`] = `"[62,0,0,323,0,2]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 4`] = `"[204,0,0,2588,2,5]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 5`] = `"[441,0,0,5306,4,10]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 6`] = `"[915,0,0,10742,4,19]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 7`] = `"[2338,0,0,27050,4,46]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 8`] = `"[4751,0,0,52684,4,46]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): ACRE 1`] = `
"[0,0,806,2046,2,0]
Notifications affichées : dirigeant . auto-entrepreneur . notification valeur annuelle"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): ACRE 2`] = `
"[0,0,1611,4093,3,8]
Notifications affichées : dirigeant . auto-entrepreneur . notification valeur annuelle"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): ACRE 3`] = `
"[0,0,2337,6139,4,12]
Notifications affichées : dirigeant . auto-entrepreneur . notification valeur annuelle"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 1`] = `"[0,0,2070,8186,4,16]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 2`] = `"[0,0,2070,8186,4,16]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 3`] = `"[0,0,2070,8186,4,16]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 4`] = `"[0,0,1441,4298,4,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 5`] = `
"[0,0,21610,39357,4,56]
Notifications affichées : dirigeant . auto-entrepreneur . contrôle seuil de CA dépassé, dirigeant . auto-entrepreneur . contrôle seuil de TVA dépassé"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 6`] = `"[0,0,1446,4195,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 1`] = `"[0,0,1298,0,4,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 2`] = `
"[0,0,1297,0,4,0]
Notifications affichées : entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 3`] = `"[0,0,1445,4093,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 4`] = `"[0,0,1451,4093,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 5`] = `"[0,0,1451,4093,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): avec charges 1`] = `"[0,0,704,2456,3,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): avec charges 2`] = `"[0,0,1290,7163,4,14]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 1`] = `"[0,0,7,6,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 2`] = `"[0,0,73,60,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 3`] = `"[0,0,145,119,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 4`] = `"[0,0,363,1023,1,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 5`] = `"[0,0,726,2046,2,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 6`] = `"[0,0,1451,4093,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 7`] = `"[0,0,3629,10232,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 8`] = `
"[0,0,7257,20465,4,40]
Notifications affichées : dirigeant . auto-entrepreneur . contrôle seuil de TVA dépassé"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): ACRE 1`] = `
"[0,8392,0,6102,4,21]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): ACRE 2`] = `
"[0,16871,0,12270,4,24]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): ACRE 3`] = `
"[0,21650,0,15827,4,31]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 1`] = `"[0,20620,0,15102,4,29]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 2`] = `"[0,20264,0,15647,4,30]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 3`] = `"[0,20620,0,15102,4,29]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 4`] = `"[0,13769,0,10084,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 5`] = `"[0,226877,0,57936,4,56]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 6`] = `
"[0,13769,0,10084,4,21]
Notifications affichées : dirigeant . indépendant . contrats madelin . contrôle montant charges"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 1`] = `"[0,13779,0,10089,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 2`] = `
"[0,14646,0,0,4,0]
Notifications affichées : entreprise . catégorie d'activité . libérale règlementée . notification CIPAV . texte"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 3`] = `"[0,13757,0,10075,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 4`] = `"[0,13769,0,10084,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 5`] = `"[0,13769,0,10084,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): avec charges 1`] = `"[0,6794,0,4976,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): avec charges 2`] = `"[0,13769,0,10084,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 1`] = `"[0,-1044,0,0,3,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 2`] = `"[0,-225,0,0,3,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 3`] = `"[0,616,0,471,3,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 4`] = `"[0,3084,0,2266,3,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 5`] = `"[0,6794,0,4976,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 6`] = `"[0,13769,0,10084,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 7`] = `"[0,33997,0,24913,4,48]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 8`] = `"[0,69895,0,36431,4,56]"`;

exports[`calculate simulations-salarié: JEI 1`] = `"[3440,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: JEI 2`] = `
"[26635,0,20000,15969,10503]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: JEI 3`] = `"[4517,0,4000,3141,2745]"`;

exports[`calculate simulations-salarié: activité partielle 1`] = `"[27,0,1560,1197,1197]"`;

exports[`calculate simulations-salarié: activité partielle 2`] = `"[427,0,4000,2594,2392]"`;

exports[`calculate simulations-salarié: activité partielle 3`] = `"[1470,0,8000,5209,4245]"`;

exports[`calculate simulations-salarié: activité partielle 4`] = `"[1172,0,4000,2704,2426]"`;

exports[`calculate simulations-salarié: activité partielle 5`] = `"[2683,0,4000,2870,2574]"`;

exports[`calculate simulations-salarié: activité partielle 6`] = `"[327,3750,3000,1940,1833]"`;

exports[`calculate simulations-salarié: activité partielle 7`] = `"[427,0,4000,2594,2485]"`;

exports[`calculate simulations-salarié: activité partielle 8`] = `"[409,0,2000,1578,1544]"`;

exports[`calculate simulations-salarié: activité partielle 9`] = `"[1247,0,2000,1540,1506]"`;

exports[`calculate simulations-salarié: activité partielle 10`] = `"[927,0,6000,4182,3498]"`;

exports[`calculate simulations-salarié: aides 1`] = `"[2302,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: aides 2`] = `
"[12823,0,10000,8911,7620]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé, contrat salarié . régime des impatriés . information"
`;

exports[`calculate simulations-salarié: aides 3`] = `"[2062,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: aides 4`] = `
"[2292,0,2000,1561,1527]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: aides embauche covid 1`] = `
"[1237,0,1500,1165,1165]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: aides embauche covid 2`] = `"[7085,0,5000,3948,3298]"`;

exports[`calculate simulations-salarié: aides embauche covid 3`] = `
"[1256,0,1500,1165,1165]
Notifications affichées : contrat salarié . CDD . information, contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: aides embauche covid 4`] = `
"[885,0,1500,1448,1448]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: apprentissage 1`] = `
"[1552,0,1500,1448,1448]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: apprentissage 2`] = `
"[1385,0,1500,1448,1448]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: assimilé salarié 1`] = `"[7015,0,5000,3943,3286]"`;

exports[`calculate simulations-salarié: assimilé salarié 2`] = `"[1583,0,1500,1163,1163]"`;

exports[`calculate simulations-salarié: assimilé salarié 3`] = `"[3685,0,3000,2348,2161]"`;

exports[`calculate simulations-salarié: atmp 1`] = `"[2534,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: avantages 1`] = `"[2667,0,2000,1540,1490]"`;

exports[`calculate simulations-salarié: avantages 2`] = `"[2677,0,2000,1539,1489]"`;

exports[`calculate simulations-salarié: avantages 3`] = `"[2587,0,2000,1549,1500]"`;

exports[`calculate simulations-salarié: cadre 1`] = `"[4122,0,3000,2348,2160]"`;

exports[`calculate simulations-salarié: cdd 1`] = `
"[2509,0,2000,1561,1528]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: cdd 2`] = `
"[2591,0,2000,1599,1551]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: cdd 3`] = `
"[3417,0,2400,1987,1906]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: cdd 4`] = `
"[3745,0,2400,1878,1799]
Notifications affichées : contrat salarié . CDD . information, contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: effectif 1`] = `"[2479,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: effectif 2`] = `"[2525,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: effectif 3`] = `"[2539,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: effectif 4`] = `"[2539,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: frais pro - DFS 1`] = `"[2242,0,2000,1630,1630]"`;

exports[`calculate simulations-salarié: frais pro - DFS 2`] = `"[2335,0,2000,1584,1549]"`;

exports[`calculate simulations-salarié: frais pro - DFS 3`] = `"[2265,0,2000,1606,1558]"`;

exports[`calculate simulations-salarié: frais pro - DFS 4`] = `"[2243,0,2000,1613,1564]"`;

exports[`calculate simulations-salarié: frais pro - DFS 5`] = `"[2437,0,2000,1590,1590]"`;

exports[`calculate simulations-salarié: frais pro - DFS 6`] = `"[1767,0,1700,1364,1364]"`;

exports[`calculate simulations-salarié: frais pro - DFS 7`] = `"[3287,0,2600,2125,2092]"`;

exports[`calculate simulations-salarié: frais pro - IKV 1`] = `"[4367,0,3200,2530,2334]"`;

exports[`calculate simulations-salarié: frais pro - IKV 2`] = `"[4346,0,3200,2511,2314]"`;

exports[`calculate simulations-salarié: frais pro - IKV 3`] = `"[2764,0,2152,1681,1630]"`;

exports[`calculate simulations-salarié: frais pro - titres restaurant 1`] = `"[2519,0,2000,1521,1487]"`;

exports[`calculate simulations-salarié: frais pro - titres restaurant 2`] = `"[4307,0,3000,2134,1944]"`;

exports[`calculate simulations-salarié: frais pro - titres restaurant 3`] = `"[2562,0,2000,1493,1458]"`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 1`] = `"[2583,0,2000,1636,1601]"`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 2`] = `"[3105,0,2000,2009,1960]"`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 3`] = `"[2654,0,2000,1636,1601]"`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 4`] = `
"[2565,0,2000,1627,1592]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 5`] = `
"[3025,0,2000,1970,1936]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 6`] = `
"[3041,0,2000,1978,1943]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 7`] = `
"[3336,2446,2000,1919,1886]
Notifications affichées : contrat salarié . temps de travail . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 8`] = `
"[3286,2286,2000,1889,1856]
Notifications affichées : contrat salarié . temps de travail . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 1`] = `"[4076,0,3000,2353,2332]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 2`] = `"[4076,0,3000,2353,2353]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 3`] = `"[4076,0,3000,2353,2353]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 4`] = `"[4076,0,3000,2353,1587]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 5`] = `"[4076,0,3000,2353,2120]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 6`] = `"[12890,0,9000,7156,6146]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 7`] = `"[12890,0,9000,7156,6407]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 8`] = `"[12890,0,9000,7156,6882]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 9`] = `"[4076,0,3000,2353,2187]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 10`] = `"[4076,0,3000,2353,2353]"`;

exports[`calculate simulations-salarié: impôt sur le revenu 1`] = `"[4076,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: impôt sur le revenu 2`] = `
"[41834,0,30000,24227,14685]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: impôt sur le revenu 3`] = `
"[4111,0,3000,2353,2172]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: impôt sur le revenu 4`] = `"[3896,0,3000,2353,2252]"`;

exports[`calculate simulations-salarié: impôt sur le revenu 5`] = `
"[41834,0,30000,24227,14685]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: impôt sur le revenu 6`] = `"[4076,0,3000,2626,2481]"`;

exports[`calculate simulations-salarié: impôt sur le revenu 7`] = `
"[41834,0,30000,26966,16383]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: impôt sur le revenu 8`] = `"[4076,0,3000,2353,2107]"`;

exports[`calculate simulations-salarié: inversions 1`] = `"[2000,0,1746,1360,1353]"`;

exports[`calculate simulations-salarié: inversions 2`] = `"[3474,0,2554,2000,1889]"`;

exports[`calculate simulations-salarié: inversions 3`] = `"[3675,0,2703,2117,2000]"`;

exports[`calculate simulations-salarié: lodeom 1`] = `
"[1592,0,1521,1182,1182]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: lodeom 2`] = `"[2085,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: lodeom 3`] = `"[3896,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: lodeom 4`] = `"[5674,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié: lodeom 5`] = `"[7889,0,5500,4349,3634]"`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 1`] = `
"[1592,0,1521,1182,1182]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 2`] = `"[2085,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 3`] = `"[3444,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 4`] = `"[5588,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 5`] = `"[7889,0,5500,4349,3634]"`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 1`] = `
"[1592,0,1521,1182,1182]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 2`] = `"[2085,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 3`] = `"[3235,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 4`] = `"[4915,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 5`] = `"[7889,0,5500,4349,3634]"`;

exports[`calculate simulations-salarié: stage 1`] = `
"[507,0,500,500,500]
Notifications affichées : contrat salarié . stage . avertissement, contrat salarié . stage . contrôle gratification minimale"
`;

exports[`calculate simulations-salarié: stage 2`] = `
"[2490,0,2000,1750,1750]
Notifications affichées : contrat salarié . stage . avertissement"
`;

exports[`calculate simulations-salarié: taux spécifiques retraite complémentaire 1`] = `
"[1606,0,1521,1195,1195]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: taux spécifiques retraite complémentaire 2`] = `"[3423,0,2500,1979,1869]"`;

exports[`calculate simulations-salarié: taux spécifiques retraite complémentaire 3`] = `
"[1592,0,1521,1170,1170]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: taux spécifiques retraite complémentaire 4`] = `"[3382,0,2500,1938,1830]"`;

exports[`calculate simulations-salarié: temps partiel 1`] = `"[2592,2188,2000,1561,1527]"`;

exports[`calculate simulations-salarié: temps partiel 2`] = `"[2533,2500,1857,1448,1428]"`;

exports[`calculate simulations-salarié: temps partiel 3`] = `
"[1159,1750,1000,770,770]
Notifications affichées : contrat salarié . temps de travail . temps partiel . contrôle temps min"
`;

exports[`calculate simulations-salarié: treizième mois 1`] = `"[3390,0,2300,1950,1842]"`;

exports[`calculate simulations-salarié: treizième mois 2`] = `"[3800,2965,2300,2186,2071]"`;

exports[`calculate simulations-salarié: treizième mois 3`] = `"[3044,0,2300,1799,1721]"`;

exports[`calculate simulations-salarié: échelle de salaires 1`] = `
"[130,0,100,57,57]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 2`] = `
"[284,0,250,176,176]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 3`] = `
"[541,0,500,374,374]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 4`] = `
"[799,0,750,572,572]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 5`] = `
"[1056,0,1000,770,770]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 6`] = `
"[1313,0,1250,968,968]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 7`] = `
"[1571,0,1500,1165,1165]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 8`] = `"[2479,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: échelle de salaires 9`] = `"[3401,0,2500,1957,1848]"`;

exports[`calculate simulations-salarié: échelle de salaires 10`] = `"[4076,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: échelle de salaires 11`] = `"[5674,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié: échelle de salaires 12`] = `"[7085,0,5000,3948,3298]"`;

exports[`calculate simulations-salarié: échelle de salaires 13`] = `
"[14319,0,10000,7958,5975]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: échelle de salaires 14`] = `
"[28345,0,20000,15969,10503]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: échelle de salaires 15`] = `
"[128575,0,100000,87157,48426]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: échelle de salaires 16`] = `
"[1243819,0,1000000,896257,498390]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;
